# callerwatch

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  monitor-kafka-logs.sh  postman-collection.json  pyproject.toml  test-scenarios-2.sh  test-scenarios.sh
app/: dependencies.py
app/core/: config.py  kafka_logger.py  security.py
app/models/: auth.py  security.py
app/repositories/: base.py  cache_repository.py
app/routers/: auth.py  security.py
app/services/: ip_checker_service.py  security_service.py
